--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <!-- Navigation bar -->
@@ -20,14 +20,16 @@
       <div class="nav_contaner">
         <ul>
           <li>
-            <a href="#"><i class="fas fa-home"></i>HOME</a>
+            <a href="#"><i class="fas fa-home"></i> HOME</a>
           </li>
           <li>
-            <a href="#login"><i class="fas fa-sign-in-alt"></i>LOGIN</a>
+            <a href="#login" class="link login_link"><i class="fas fa-sign-in-alt"></i> LOGIN</a>
           </li>
         </ul>
       </div>
     </nav>
+    <!--login form containt-->
+   
     <!-- college info -->
     <div class="main_body">
         <div class="text-box">
@@ -37,9 +39,11 @@
               under 2(f) and 12(B).<br> The college is ISO 9001:2015 certified and
               is accredited by NAAC with the prestigious ‘A’ Grade in all the three cycles of accreditation.
             </p>
-            <a href="#" class="btn">Visti us to know More</a>
+            <a href="https://pcacs.ac.in/" class="Visti">Visti us to know More</a>
           </div>
 
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
